--- a/AISec_Phishing_Perceptron.ipynb
+++ b/AISec_Phishing_Perceptron.ipynb
@@ -20,36 +20,13 @@
       "version": "3.5.4"
     },
     "colab": {
-      "name": "AISec_Spam_Perceptron.ipynb",
+      "name": "AISec_Phishing_Perceptron.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mNVe3UYX4gWa",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **Meet NNs at their purest – the Perceptron**\n",
-        "The peculiar characteristic that unites all NNs (regardless of their implementation complexity) is that they conceptually mimic the behavior of the human brain. The most basic structure we encounter when we analyze the behavior of the brain, is undoubtedly the neuron.The Perceptron is one of the first successful implementations of a neuron in the field of Artificial Intelligence (AI). Just like a neuron in the human brain, it is characterized by a layered structure, aimed at associating a result in output to certain input levels, as shown in the following diagram:\n",
-        "\n",
-        "![Neuron](https://github.com/behzadanksu/AISecS20/blob/master/lab1/neuron.png?raw=true)\n",
-        "\n",
-        "In the same way, the artificial representation of the neuron implemented through the Perceptron model is structured in such a way as to associate a given output value to one or more levels of input data:\n",
-        "\n",
-        "![alt text](https://github.com/behzadanksu/AISecS20/blob/master/lab1/perceptron.png?raw=true)\n",
-        "\n",
-        "# It's all about finding the right weight!\n",
-        "\n",
-        "One of the differences in the approach between the statistical models and the AI algorithms is that the algorithms implement an optimization strategy based on the iteration. At each iteration, in fact, the algorithm tries to adjust its own estimate of the values, attributing to them a greater or lesser weight depending on the cost function that we must minimize. One of the aims of the algorithm is to identify precisely an optimal weight vector to be applied to the estimated values in order to obtain reliable future predictions on unknown future data.To fully understand the power of AI algorithms applied to spam detection, we must first clarify the ideas on which tasks we should perform a spam filter.\n",
-        "\n",
-        "\n"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -69,11 +46,11 @@
         "\n",
         "\n",
         "df = pd.read_csv('phishing_dataset.csv')\n",
-        "df1=df.replace(0,-1)\n",
-        "y = df1.iloc[:, -1].values\n",
         "\n",
+        "y = df.iloc[:, -1].values\n",
         "\n",
-        "X = df1.iloc[:, :-1 ].values"
+        "X = df.iloc[:, :-1].values\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -83,17 +60,17 @@
       "metadata": {
         "id": "6xZg0RCcUKO3",
         "colab_type": "code",
-        "outputId": "f826687a-7b2a-46f1-c67c-deb026e28d85",
+        "outputId": "713891a8-3c43-413d-dac5-1d2802b5a7b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 215
         }
       },
       "source": [
-        "df1.tail()\n",
+        "df.tail()\n",
         "\n"
       ],
-      "execution_count": 334,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +148,7 @@
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
               "      <td>1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
@@ -202,7 +179,7 @@
               "      <td>1</td>\n",
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
               "      <td>1</td>\n",
@@ -234,22 +211,22 @@
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>-1</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>-1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>-1</td>\n",
               "    </tr>\n",
@@ -273,7 +250,7 @@
               "      <td>-1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
               "      <td>-1</td>\n",
               "      <td>1</td>\n",
               "      <td>-1</td>\n",
@@ -303,11 +280,11 @@
               "      <td>1</td>\n",
               "      <td>-1</td>\n",
               "      <td>-1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
               "      <td>-1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
@@ -329,7 +306,7 @@
               "       -1  1  1.1  1.2  -1.1  -1.2  ...  -1.13  -1.14  1.11  1.12  -1.15  -1.16\n",
               "11049   1 -1    1   -1     1     1  ...     -1     -1     1     1      1      1\n",
               "11050  -1  1    1   -1    -1    -1  ...      1      1     1    -1      1     -1\n",
-              "11051   1 -1    1    1     1    -1  ...      1     -1     1    -1      1     -1\n",
+              "11051   1 -1    1    1     1    -1  ...      1     -1     1     0      1     -1\n",
               "11052  -1 -1    1    1     1    -1  ...      1     -1     1     1      1     -1\n",
               "11053  -1 -1    1    1     1    -1  ...     -1     -1    -1     1     -1     -1\n",
               "\n",
@@ -339,7 +316,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 334
+          "execution_count": 66
         }
       ]
     },
@@ -354,7 +331,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "         X, y, test_size=0.2, random_state=2)\n",
+        "         X, y, test_size=0.3, random_state=0)\n",
         "\n"
       ],
       "execution_count": 0,
@@ -365,7 +342,7 @@
       "metadata": {
         "id": "R2dr3V6h3a3B",
         "colab_type": "code",
-        "outputId": "7cba9f69-5973-41ac-b5bd-69fbef82309c",
+        "outputId": "90068ff6-858b-4fde-eabb-c72fcb14b3d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
@@ -374,17 +351,17 @@
       "source": [
         "from sklearn.linear_model import Perceptron\n",
         "#eta0 threshold of error\n",
-        "p = Perceptron(max_iter=40, eta0=0.1, random_state=0)\n",
+        "p = Perceptron(max_iter=50, eta0=0.7, random_state=0)\n",
         "p.fit(X_train, y_train)"
       ],
-      "execution_count": 336,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Perceptron(alpha=0.0001, class_weight=None, early_stopping=False, eta0=0.1,\n",
-              "           fit_intercept=True, max_iter=40, n_iter_no_change=5, n_jobs=None,\n",
+              "Perceptron(alpha=0.0001, class_weight=None, early_stopping=False, eta0=0.7,\n",
+              "           fit_intercept=True, max_iter=50, n_iter_no_change=5, n_jobs=None,\n",
               "           penalty=None, random_state=0, shuffle=True, tol=0.001,\n",
               "           validation_fraction=0.1, verbose=0, warm_start=False)"
             ]
@@ -392,7 +369,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 336
+          "execution_count": 68
         }
       ]
     },
@@ -414,7 +391,7 @@
       "metadata": {
         "id": "lEfBW6hs3a3K",
         "colab_type": "code",
-        "outputId": "121af02b-0105-4533-9c5f-d6353f7bd5c2",
+        "outputId": "9f35116a-9854-4bb9-e162-347f4a2b0eac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -426,13 +403,13 @@
         "print('Misclassified samples: %d' % (y_test != y_pred).sum())\n",
         "print('Accuracy: %.2f' % accuracy_score(y_test, y_pred))"
       ],
-      "execution_count": 338,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Misclassified samples: 224\n",
-            "Accuracy: 0.90\n"
+            "Misclassified samples: 264\n",
+            "Accuracy: 0.92\n"
           ],
           "name": "stdout"
         }
