--- a/Lab 3 SVM and Linear Regression on Phishing Dataset/readme
+++ b/Lab 3 SVM and Linear Regression on Phishing Dataset/readme
@@ -1,1 +1,19 @@
+For Phishing Dataset with SVM and Logistic regression:
 
+Google collab
+
+https://colab.research.google.com/drive/1NRQRMlykJXoNOBiigyPc4uMpYf1zOwoH#scrollTo=zhihg4j13v41
+
+Github
+
+https://github.com/nitinpathania007/Artificial-Intelligence-and-CyberSecurity/tree/master/Lab%203%20SVM%20and%20Linear%20Regression%20on%20Phishing%20Dataset
+
+For sms_spam_svm with Logistic Regression and SVM:
+
+google collab
+
+https://colab.research.google.com/drive/1_yv6KdyvBagN7MjC_SuqDAL9O3kyF1fW#scrollTo=r_Oq_aqX4Qvt
+
+Github
+
+https://github.com/nitinpathania007/Artificial-Intelligence-and-CyberSecurity/tree/master/Lab%203%20SVM%20and%20Linear%20Regression%20on%20Phishing%20Dataset
